--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<div class="inner">
 							<header class="major">
 							  <h1>東京大学天文学教室 </br>
-							    梅梅田研ホームページへようこそ</h1>
+							    梅田研ホームページへようこそ</h1>
 							</header>
 							<div class="content">
 							  <p>We conduct research on stellar evolution and <br />
@@ -184,3 +184,4 @@
 
 	</body>
 </html>
+
