--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="ResearchOverview.html" class="link">Research Overview</a></h3>
+										<h3><a href="ResearchOverview.html" class="link">研究テーマ</a></h3>
 										<p>Click to see what we are currently researching.</p>
 									</header>
 								</article>
@@ -184,4 +184,5 @@
 
 	</body>
 </html>
+
 
