--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="Publications.html" class="link">Publications</a></h3>
+										<h3><a href="Publications.html" class="link">論文</a></h3>
 										<p>Click to see our publications.</p>
 									</header>
 								</article>
@@ -80,7 +80,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="Members.html" class="link">Members</a></h3>
+										<h3><a href="Members.html" class="link">グループメンバー</a></h3>
 										<p>Click to see our group members and collaborators.</p>
 									</header>
 								</article>
@@ -89,7 +89,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="#two" class="next scrolly">Data & Program Download</a></h3>
+										<h3><a href="#two" class="next scrolly">データとプログラム</a></h3>
 										<p></p>
 									</header>
 								</article>
@@ -184,5 +184,6 @@
 
 	</body>
 </html>
+
 
 
