--- a/Members.html
+++ b/Members.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Research Overview - Umeda Lab.</title>
+		<title>Group Member - Umeda Lab.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -44,10 +44,10 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Research Overview</h1>
+								<h1>Group Member</h1>
 							</header>
 							<div class="">
-								<p>Keywords: Supernovae; Gamma-ray Bursts; Hypernovae; Stellar Evolution; Population III Stars; Neutron Stars; Black Holes; Nucleosynthesis. </p>
+								<p></p>
 							</div>
 						</div>
 					</section>
@@ -56,14 +56,6 @@
 					<div id="main">
 
 						<!-- One -->
-							<section id="one">
-								<div class="inner">
-									<header class="major">
-										<h2>Brief Introduction</h2>
-									</header>
-									<p>We perform numerical calculations of massive-star evolution prior to explosion and explosion simulations in order to elucidate the explosion mechanisms of supernovae and gamma-ray bursts. We also compute the associated nucleosynthesis and, by comparing our results with the chemical compositions of metal-poor stars and galaxies, we test our theoretical models while clarifying galactic chemical evolution and the origins of the elements.</p>
-								</div>
-							</section>
 
 						<!-- Two -->
 							<section id="two" class="spotlights">
@@ -74,43 +66,43 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Research Theme 1</h3>
+												<h3>Umeda Hideyuki</h3>
 											</header>
-											<p>Introduction of Research theme 1</p>
+											<p>Associate Professor.</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="https://www.u-tokyo.ac.jp/focus/ja/people/people003321.html" class="button">More about</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="" class="image">
 										<img src="images/pic09.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Research Theme 2</h3>
+												<h3>Zou Kehan</h3>
 											</header>
-											<p>Introduction of Research Theme 2</p>
+											<p>M.S. student</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="" class="button">More about</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="" class="image">
 										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Research Theme 3</h3>
+												<h3>Wu Yuxin</h3>
 											</header>
-											<p>Introduction of Research theme 3</p>
+											<p>M.S. student</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="https://yuxin-utokyo.github.io" class="button">More about</a></li>
 											</ul>
 										</div>
 									</div>
@@ -120,72 +112,10 @@
 						<!-- Three -->
 
 
-				<!-- Contact -->
-					<section id="contact">
-						<div class="inner">
-							<section>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="6"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Clear" /></li>
-									</ul>
-								</form>
-							</section>
-							<section class="split">
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-envelope"></span>
-										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
-									</div>
-								</section>
-							</section>
-						</div>
-					</section>
-
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							</ul>
-							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-							</ul>
 						</div>
 					</footer>
 
