--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						</nav>
 					</header>
 
-				<!-- Menu -->
+					<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
@@ -43,10 +43,10 @@
 							    梅田研ホームページへようこそ</h1>
 							</header>
 							<div class="content">
-							  <p>We conduct research on stellar evolution and <br />
-							    the origin of elements using numerical simulations.</p>
+							  <p>我々は数値シミュレーションを用いて、<br />
+							    恒星進化と元素の起源に関する研究を行っている。</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">More about us</a></li>
+									<li><a href="#one" class="button next scrolly">詳しく知る</a></li>
 								</ul>
 							</div>
 						</div>
@@ -62,8 +62,8 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="ResearchOverview.html" class="link">研究テーマ</a></h3>
-										<p>Click to see what we are currently researching.</p>
+										<h3><a href="ResearchOverview.html" class="link">研究概要</a></h3>
+										<p>クリックして、現在研究中の内容をご覧ください。</p>
 									</header>
 								</article>
 								<article>
@@ -72,7 +72,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="Publications.html" class="link">論文</a></h3>
-										<p>Click to see our publications.</p>
+										<p>クリックして、我々の出版論文をご覧ください。</p>
 									</header>
 								</article>
 								<article>
@@ -81,7 +81,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="Members.html" class="link">グループメンバー</a></h3>
-										<p>Click to see our group members and collaborators.</p>
+										<p>クリックして当研究室のメンバーと協力者をご覧ください</p>
 									</header>
 								</article>
 								<article>
@@ -89,7 +89,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="#two" class="next scrolly">データとプログラム</a></h3>
+										<h3><a href="#two" class="next scrolly">データとプログラムのダウンロード</a></h3>
 										<p></p>
 									</header>
 								</article>
@@ -100,11 +100,11 @@
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>To Prospective Students</h2>
+										<h2>入学希望者の皆様へ</h2>
 									</header>
 									<p>Write something here...</p>
 									<ul class="actions">
-										<li><a href="landing.html" class="button next">Get Started</a></li>
+										<li><a href="landing.html" class="button next">東京大学天文学専攻ホームページ</a></li>
 									</ul>
 								</div>
 							</section>
@@ -158,13 +158,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							</ul>
+
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
@@ -184,6 +178,3 @@
 
 	</body>
 </html>
-
-
-
