--- a/Members.html
+++ b/Members.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><strong>Umeda Hideyuki</strong> <span>'s Group</span></a>
+						<a href="index.html" class="logo"><strong>梅田秀之</strong> <span>研究室</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -44,7 +44,7 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Group Member</h1>
+								<h1>グループメンバー</h1>
 							</header>
 							<div class="">
 								<p></p>
@@ -66,48 +66,41 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Umeda Hideyuki</h3>
+												<h3>梅田 秀之</h3>
 											</header>
-											<p>Associate Professor.</p>
+											<p>准教授。</p>
 											<ul class="actions">
 												<li><a href="https://www.u-tokyo.ac.jp/focus/ja/people/people003321.html" class="button">More about</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
-								<section>
-									<a href="" class="image">
-										<img src="images/pic09.jpg" alt="" data-position="top center" />
-									</a>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h3>Zou Kehan</h3>
-											</header>
-											<p>M.S. student</p>
-											<ul class="actions">
-												<li><a href="" class="button">More about</a></li>
-											</ul>
-										</div>
-									</div>
-								</section>
-								<section>
-									<a href="" class="image">
-										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
-									</a>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h3>Wu Yuxin</h3>
-											</header>
-											<p>M.S. student</p>
-											<ul class="actions">
-												<li><a href="https://yuxin-utokyo.github.io" class="button">More about</a></li>
-											</ul>
-										</div>
-									</div>
-								</section>
 							</section>
+							<section id="one">
+							  <div class="inner">
+							    <div class="row">
+							      <div class="col-3"><span class="image fit"><img src="images/pic08.jpg" alt="" /></span></div>
+							      <div class="col-3 col-12-small">
+								<h3>邹 可翰</h3>
+								<p>修士学生。</p>
+								<ul class="actions">
+								  <li><a href="" class="button">More about</a></li>
+								</ul>
+							      </div>
+							      <div class="col-3"><span class="image fit"><img src="images/pic08.jpg" alt="" /></span></div>
+							      <div class="col-3 col-12-small">
+								<header class="major">
+								  <h3>呉 雨欣</h3>
+								</header>
+								<p>修士学生。</p>
+								<ul class="actions">
+								  <li><a href="https://yuxin-utokyo.github.io" class="button">More about</a></li>
+							      </ul>
+							      </div>
+							    </div>
+							  </div>
+							</section>
+							<section>
 
 						<!-- Three -->
 
