--- a/ResearchOverview.html
+++ b/ResearchOverview.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><strong>Umeda Hideyuki</strong> <span>'s Group</span></a>
+						<a href="index.html" class="logo"><strong>梅田秀之</strong> <span>研究室</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -44,10 +44,10 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Research Overview</h1>
+								<h1>研究概要</h1>
 							</header>
 							<div class="">
-								<p>Keywords: Supernovae; Gamma-ray Bursts; Hypernovae; Stellar Evolution; Population III Stars; Neutron Stars; Black Holes; Nucleosynthesis. </p>
+								<p>キーワード:超新星、ガンマ線バースト、極超新星、恒星進化、第一世代星、中性子星、ブラックホール、元素合成</p>
 							</div>
 						</div>
 					</section>
@@ -59,9 +59,13 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Brief Introduction</h2>
+										<h2>研究分野</h2>
 									</header>
-									<p>We perform numerical calculations of massive-star evolution prior to explosion and explosion simulations in order to elucidate the explosion mechanisms of supernovae and gamma-ray bursts. We also compute the associated nucleosynthesis and, by comparing our results with the chemical compositions of metal-poor stars and galaxies, we test our theoretical models while clarifying galactic chemical evolution and the origins of the elements.</p>
+									<p>理論天体物理学</p>
+									<header class="major">
+                                                                                <h2>研究内容</h2>
+                                                                        </header>
+                                                                        <p>超新星やガンマ線バーストの爆発機構の解明のため、それらの爆発前の重量星の進化計算と爆発シミュレーションを数値計算によって行っている。またそれらに よる元素合成の計算を行い、金属欠乏星や銀河などの化学組成との比較により、理論の検証と同時に銀河の化学進化の様子や元素の起源を明らかにしていく。</p>
 								</div>
 							</section>
 
@@ -74,7 +78,7 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Research Theme 1</h3>
+												<h3>研究テーマ 1</h3>
 											</header>
 											<p>Introduction of Research theme 1</p>
 											<ul class="actions">
@@ -90,7 +94,7 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Research Theme 2</h3>
+												<h3>研究テーマ 2</h3>
 											</header>
 											<p>Introduction of Research Theme 2</p>
 											<ul class="actions">
@@ -106,7 +110,7 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Research Theme 3</h3>
+												<h3>研究テーマ 3</h3>
 											</header>
 											<p>Introduction of Research theme 3</p>
 											<ul class="actions">
@@ -150,23 +154,15 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
+										<a href="#">umeda@astron.s.u-tokyo.ac.jp</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
 										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
+										<span>東京大学</br>
+										  理1号館11階1105号室</span>
 									</div>
 								</section>
 							</section>
@@ -176,15 +172,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+						  <li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
