--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="Publications.html" class="link">論文</a></h3>
+										<h3><a href="https://ui.adsabs.harvard.edu/search/q=author%3A(%22umeda%2C%20hideyuki%22)&sort=date%20desc%2C%20bibcode%20desc&p_=0" class="link">論文</a></h3>
 										<p>クリックして、我々の出版論文をご覧ください。</p>
 									</header>
 								</article>
