--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="#">
+							  <form method="post"
+								action="mailto:umeda@astron.s.u-tokyo.ac.jp"
+								enctype="text/plain">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -141,14 +143,17 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">umeda@astron.s.u-tokyo.ac.jp</a>
+										<a href="mailto:umeda@astron.s.u-tokyo.ac.jp">umeda@astron.s.u-tokyo.ac.jp</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
 										<h3>Address</h3>
-										<span></span>
+										<span>〒113-0033</br>
+										  文京区本郷7-3-1</br>
+										  東京大学</br>
+										  理1号館11階1105号室</span>
 									</div>
 								</section>
 							</section>
@@ -178,3 +183,4 @@
 
 	</body>
 </html>
+B
