--- a/ResearchOverview.html
+++ b/ResearchOverview.html
@@ -73,7 +73,7 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="" class="image">
-										<img src="images/pic08.jpg" alt="" data-position="center center" />
+										<img src="images/ResearchOverview/theme1.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -82,14 +82,14 @@
 											</header>
 											<p>Introduction of Research theme 1</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
-										<img src="images/pic09.jpg" alt="" data-position="top center" />
+									<a href="" class="image">
+										<img src="images/ResearchOverview/theme2.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -98,14 +98,14 @@
 											</header>
 											<p>Introduction of Research Theme 2</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
-										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
+									<a href="" class="image">
+										<img src="images/ResearchOverview/theme3.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -114,7 +114,7 @@
 											</header>
 											<p>Introduction of Research theme 3</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
@@ -124,69 +124,75 @@
 						<!-- Three -->
 
 
-				<!-- Contact -->
-					<section id="contact">
-						<div class="inner">
-							<section>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="6"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Clear" /></li>
-									</ul>
-								</form>
-							</section>
-							<section class="split">
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-envelope"></span>
-										<h3>Email</h3>
-										<a href="#">umeda@astron.s.u-tokyo.ac.jp</a>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>東京大学</br>
-										  理1号館11階1105号室</span>
-									</div>
-								</section>
-							</section>
-						</div>
-					</section>
+                                <!-- Contact -->
+                                        <section id="contact">
+                                                <div class="inner">
+                                                        <section>
+                                                          <form method="post"
+                                                                action="mailto:umeda@astron.s.u-tokyo.ac.jp"
+                                                                enctype="text/plain">
+                                                                        <div class="fields">
+                                                                                <div class="field half">
+                                                                                        <label for="name">Name</label>
+                                                                                        <input type="text" name="name" id="name" />
+                                                                                </div>
+                                                                                <div class="field half">
+                                                                                        <label for="email">Email</label>
+                                                                                        <input type="text" name="email" id="email" />
+                                                                                </div>
+                                                                                <div class="field">
+                                                                                        <label for="message">Message</label>
+                                                                                        <textarea name="message" id="message" rows="6"></textarea>
+                                                                                </div>
+                                                                        </div>
+                                                                        <ul class="actions">
+                                                                                <li><input type="submit" value="Send Message" class="primary" /></li>
+                                                                                <li><input type="reset" value="Clear" /></li>
+                                                                        </ul>
+                                                                </form>
+                                                        </section>
+                                                        <section class="split">
+                                                                <section>
+                                                                        <div class="contact-method">
+                                                                                <span class="icon solid alt fa-envelope"></span>
+                                                                                <h3>Email</h3>
+                                                                                <a href="mailto:umeda@astron.s.u-tokyo.ac.jp">umeda@astron.s.u-tokyo.ac.jp</a>
+                                                                        </div>
+                                                                </section>
+                                                                <section>
+                                                                        <div class="contact-method">
+                                                                                <span class="icon solid alt fa-home"></span>
+                                                                                <h3>Address</h3>
+                                                                                <span>〒113-0033</br>
+                                                                                  文京区本郷7-3-1</br>
+                                                                                  東京大学</br>
+                                                                                  理1号館11階1105号室</span>
+                                                                        </div>
+                                                                </section>
+                                                        </section>
+                                                </div>
+                                        </section>
+                                <!-- Footer -->
+                                        <footer id="footer">
+                                                <div class="inner">
 
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-						  <li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
+                                                        <ul class="copyright">
+                                                                <li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+                                                        </ul>
+                                                </div>
+                                        </footer>
 
-			</div>
+                        </div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+                <!-- Scripts -->
+                        <script src="assets/js/jquery.min.js"></script>
+                        <script src="assets/js/jquery.scrolly.min.js"></script>
+                        <script src="assets/js/jquery.scrollex.min.js"></script>
+                        <script src="assets/js/browser.min.js"></script>
+                        <script src="assets/js/breakpoints.min.js"></script>
+                        <script src="assets/js/util.js"></script>
+                        <script src="assets/js/main.js"></script>
 
-	</body>
+        </body>
 </html>
+
