--- a/Members.html
+++ b/Members.html
@@ -26,15 +26,16 @@
 						</nav>
 					</header>
 
-				<!-- Menu -->
-					<nav id="menu">
-						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="ResearchOverview.html">Research Overview</a></li>
-							<li><a href="Publications.html">Publications</a></li>
-							<li><a href="Members.html">Members</a></li>
-						</ul>
-					</nav>
+                                        <!-- Menu -->
+                                        <nav id="menu">
+                                                <ul class="links">
+                                                        <li><a href="index.html">ホーム</a></li>
+                                                        <li><a href="ResearchOverview.html">研究概要</a></li>
+                                                        <li><a href="https://ui.adsabs.harvard.edu/search/q=author%3A(%22umeda%2C%20hideyuki%22)&sort=date%20desc%2C%20bibcode%20desc\
+&p_=0">論文</a></li>
+                                                        <li><a href="Members.html">グループメンバー</a></li>
+                                                </ul>
+                                        </nav>
 
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
@@ -58,36 +59,50 @@
 						<!-- One -->
 
 						<!-- Two -->
-							<section id="two" class="spotlights">
-								<section>
-									<a href="" class="image">
-										<img src="images/pic08.jpg" alt="" data-position="center center" />
-									</a>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h3>梅田 秀之</h3>
-											</header>
-											<p>准教授。</p>
-											<ul class="actions">
-												<li><a href="https://www.u-tokyo.ac.jp/focus/ja/people/people003321.html" class="button">More about</a></li>
-											</ul>
-										</div>
-									</div>
-								</section>
-							</section>
-							<section id="one">
+
+						<section id="two" class="spotlights">
+						  <div class="inner">
+						  <section>
+						    <div class="content">
+
+						    <div class="row">
+							<div class="col-4"><span class="image fit"><img src="images/Members/umeda.jpg" alt="" /></span></div>
+							<div class="col-6 col-12-small">
+							  <header class="major">
+							    <h3>梅田 秀之/UMEDA Hideyuki</h3>
+							    </header>
+							  <p>准教授。</p>
+							  <ul class="actions">
+							    <li><a href="https://www.u-tokyo.ac.jp/focus/ja/people/people003321.html" class="button">More about</a></li>
+							  </ul>
+							</div>
+						    </div>
+						      </div>
+						  </section>
+						  </div>
+						</section>
+
+
+						<section id="one">
+
 							  <div class="inner">
 							    <div class="row">
+							      <div class="col-12">
+							      <header class="major">
+								<h3>現在のグループメンバー</h3></br>
+							      </header>
+							      </div>
 							      <div class="col-3"><span class="image fit"><img src="images/pic08.jpg" alt="" /></span></div>
 							      <div class="col-3 col-12-small">
-								<h3>邹 可翰</h3>
+								<header class="major">
+								  <h3>邹 可翰</h3>
+								</header>
 								<p>修士学生。</p>
 								<ul class="actions">
 								  <li><a href="" class="button">More about</a></li>
 								</ul>
 							      </div>
-							      <div class="col-3"><span class="image fit"><img src="images/pic08.jpg" alt="" /></span></div>
+							      <div class="col-3"><span class="image fit"><img src="images/Members/yuxin.jpg" alt="" /></span></div>
 							      <div class="col-3 col-12-small">
 								<header class="major">
 								  <h3>呉 雨欣</h3>
@@ -100,28 +115,129 @@
 							    </div>
 							  </div>
 							</section>
-							<section>
+							
+						<section id="one">
+							  <div class="inner">
+							    <div class="row">
+							      <div class="col-12">
+							      <header class="major">
+								<h3>過去のメンバー</h3></br>
+							      </header>
+							      </div>
+							      <div class="col-3 col-12-small">
+								<header class="major">
+								  <h3>名前</h3>
+								</header>
+								<p>紹介</p>
+								<ul class="actions">
+								  <li><a href="" class="button">More about</a></li>
+								</ul>
+							      </div>
+							      <div class="col-3 col-12-small">
+								<header class="major">
+								  <h3>名前</h3>
+								</header>
+								<p>紹介</p>
+								<ul class="actions">
+								  <li><a href="" class="button">More about</a></li>
+								</ul>
+							      </div>
+							      <div class="col-3 col-12-small">
+								<header class="major">
+								  <h3>名前</h3>
+								</header>
+								<p>紹介</p>
+								<ul class="actions">
+								  <li><a href="" class="button">More about</a></li>
+								</ul>
+							      </div>
+							      <div class="col-3 col-12-small">
+								<header class="major">
+								  <h3>名前</h3>
+								</header>
+								<p>紹介</p>
+								<ul class="actions">
+								  <li><a href="" class="button">More about</a></li>
+							      </ul>
+							      </div>
+							    </div>
+							  </div>
+							</section>
+					</div>
 
-						<!-- Three -->
+
+                                <!-- Contact -->
+                                        <section id="contact">
+                                                <div class="inner">
+                                                        <section>
+                                                          <form method="post"
+                                                                action="mailto:umeda@astron.s.u-tokyo.ac.jp"
+                                                                enctype="text/plain">
+                                                                        <div class="fields">
+                                                                                <div class="field half">
+                                                                                        <label for="name">Name</label>
+                                                                                        <input type="text" name="name" id="name" />
+                                                                                </div>
+                                                                                <div class="field half">
+                                                                                        <label for="email">Email</label>
+                                                                                        <input type="text" name="email" id="email" />
+                                                                                </div>
+                                                                                <div class="field">
+                                                                                        <label for="message">Message</label>
+                                                                                        <textarea name="message" id="message" rows="6"></textarea>
+                                                                                </div>
+                                                                        </div>
+                                                                        <ul class="actions">
+                                                                                <li><input type="submit" value="Send Message" class="primary" /></li>
+                                                                                <li><input type="reset" value="Clear" /></li>
+                                                                        </ul>
+                                                                </form>
+                                                        </section>
+                                                        <section class="split">
+                                                                <section>
+                                                                        <div class="contact-method">
+                                                                                <span class="icon solid alt fa-envelope"></span>
+                                                                                <h3>Email</h3>
+                                                                                <a href="mailto:umeda@astron.s.u-tokyo.ac.jp">umeda@astron.s.u-tokyo.ac.jp</a>
+                                                                        </div>
+                                                                </section>
+                                                                <section>
+                                                                        <div class="contact-method">
+                                                                                <span class="icon solid alt fa-home"></span>
+                                                                                <h3>Address</h3>
+                                                                                <span>〒113-0033</br>
+                                                                                  文京区本郷7-3-1</br>
+                                                                                  東京大学</br>
+                                                                                  理1号館11階1105号室</span>
+                                                                        </div>
+                                                                </section>
+                                                        </section>
+                                                </div>
+                                        </section>
 
 
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-						</div>
-					</footer>
 
-			</div>
+					                                <!-- Footer -->
+                                        <footer id="footer">
+                                                <div class="inner">
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+                                                        <ul class="copyright">
+                                                                <li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+                                                        </ul>
+                                                </div>
+                                        </footer>
 
-	</body>
+                        </div>
+
+                <!-- Scripts -->
+                        <script src="assets/js/jquery.min.js"></script>
+                        <script src="assets/js/jquery.scrolly.min.js"></script>
+                        <script src="assets/js/jquery.scrollex.min.js"></script>
+                        <script src="assets/js/browser.min.js"></script>
+                        <script src="assets/js/breakpoints.min.js"></script>
+                        <script src="assets/js/util.js"></script>
+                        <script src="assets/js/main.js"></script>
+
+        </body>
 </html>
+
