--- a/Members_.html
+++ b/Members_.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Umeda Lab.</title>
+		<title>Group Member - Umeda Lab.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,94 +18,52 @@
 			<div id="wrapper">
 
 				<!-- Header -->
-					<header id="header" class="alt">
+					<header id="header">
 						<a href="index.html" class="logo"><strong>梅田秀之</strong> <span>研究室</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
 					</header>
 
-					<!-- Menu -->
+				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="ResearchOverview.html">Research Overview</a></li>
-							<li><a href="Publications.html">Publications</a></li>
-							<li><a href="Members.html">Members</a></li>
+							<li><a href="landing.html">Landing</a></li>
+							<li><a href="generic.html">Generic</a></li>
+							<li><a href="elements.html">Elements</a></li>
+						</ul>
+						<ul class="actions stacked">
+							<li><a href="#" class="button primary fit">Get Started</a></li>
+							<li><a href="#" class="button fit">Log In</a></li>
 						</ul>
 					</nav>
 
-				<!-- Banner -->
-					<section id="banner" class="major">
-						<div class="inner">
-							<header class="major">
-							  <h1>東京大学天文学教室 </br>
-							    梅田研ホームページへようこそ</h1>
-							</header>
-							<div class="content">
-							  <p>我々は数値シミュレーションを用いて、<br />
-							    恒星進化と元素の起源に関する研究を行っている。</p>
-								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">詳しく知る</a></li>
-								</ul>
-							</div>
-						</div>
-					</section>
-
 				<!-- Main -->
-					<div id="main">
+					<div id="main" class="alt">
 
 						<!-- One -->
-							<section id="one" class="tiles">
-								<article>
-									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="ResearchOverview.html" class="link">研究概要</a></h3>
-										<p>クリックして、現在研究中の内容をご覧ください。</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="Publications.html" class="link">論文</a></h3>
-										<p>クリックして、我々の出版論文をご覧ください。</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="Members.html" class="link">グループメンバー</a></h3>
-										<p>クリックして当研究室のメンバーと協力者をご覧ください</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="#two" class="next scrolly">データとプログラムのダウンロード</a></h3>
-										<p></p>
-									</header>
-								</article>
-
-							</section>
-
-						<!-- Two -->
-							<section id="two">
+							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>入学希望者の皆様へ</h2>
+										<h1>グループメンバー</h1>
 									</header>
-									<p>Write something here...</p>
-									<ul class="actions">
-										<li><a href="landing.html" class="button next">東京大学天文学専攻ホームページ</a></li>
-									</ul>
+									<h3>梅田 秀之</h3>
+									<p>東京大学天文学教室准教授。</p>
+							
+								<div class="row">
+                                                                                        <div class="col-6 col-12-small">
+                                                                                                <h3>邹 可翰</h3>
+                                                                                                <p>修士2年生。</p>
+                                                                                        </div>
+                                                                                        <div class="col-6 col-12-small">
+                                                                                                <h3>呉 雨欣</h3>
+                                                                                                <p>修士1年生。</p>
+												<ul class="actions">
+                                                                                                  <li><a href="https://yuxin-utokyo.github.io" class="button">ホームページ</a></li>
+                                                                                                </ul>
+                                                                                        </div>
+
 								</div>
 							</section>
 
@@ -141,14 +99,23 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">umeda@astron.s.u-tokyo.ac.jp</a>
+										<a href="#">information@untitled.tld</a>
+									</div>
+								</section>
+								<section>
+									<div class="contact-method">
+										<span class="icon solid alt fa-phone"></span>
+										<h3>Phone</h3>
+										<span>(000) 000-0000 x12387</span>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
 										<h3>Address</h3>
-										<span></span>
+										<span>1234 Somewhere Road #5432<br />
+										Nashville, TN 00000<br />
+										United States of America</span>
 									</div>
 								</section>
 							</section>
@@ -158,7 +125,13 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-
+							<ul class="icons">
+								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
