--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 					<header id="header" class="alt">
 						<a href="index.html" class="logo"><strong>梅田秀之</strong> <span>研究室</span></a>
 						<nav>
-							<a href="#menu">Menu</a>
+							<a href="#menu">メニュー</a>
 						</nav>
 					</header>
 
 					<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="ResearchOverview.html">Research Overview</a></li>
-							<li><a href="Publications.html">Publications</a></li>
-							<li><a href="Members.html">Members</a></li>
+							<li><a href="index.html">ホーム</a></li>
+							<li><a href="ResearchOverview.html">研究概要</a></li>
+							<li><a href="https://ui.adsabs.harvard.edu/search/q=author%3A(%22umeda%2C%20hideyuki%22)&sort=date%20desc%2C%20bibcode%20desc&p_=0">論文</a></li>
+							<li><a href="Members.html">グループメンバー</a></li>
 						</ul>
 					</nav>
 
@@ -183,4 +183,3 @@
 
 	</body>
 </html>
-B
