--- a/ResearchOverview.html
+++ b/ResearchOverview.html
@@ -67,6 +67,9 @@
                                                                                 <h2>研究内容</h2>
                                                                         </header>
                                                                         <p>超新星やガンマ線バーストの爆発機構の解明のため、それらの爆発前の重量星の進化計算と爆発シミュレーションを数値計算によって行っている。またそれらに よる元素合成の計算を行い、金属欠乏星や銀河などの化学組成との比較により、理論の検証と同時に銀河の化学進化の様子や元素の起源を明らかにしていく。</p>
+											<p> 最近の主な研究</p>
+									　		
+								
 								</div>
 							</section>
 
@@ -196,4 +199,5 @@
 
         </body>
 </html>
+
 
