--- a/ResearchOverview.html
+++ b/ResearchOverview.html
@@ -67,8 +67,15 @@
                                                                                 <h2>研究内容</h2>
                                                                         </header>
                                                                         <p>超新星やガンマ線バーストの爆発機構の解明のため、それらの爆発前の重量星の進化計算と爆発シミュレーションを数値計算によって行っている。またそれらに よる元素合成の計算を行い、金属欠乏星や銀河などの化学組成との比較により、理論の検証と同時に銀河の化学進化の様子や元素の起源を明らかにしていく。</p>
-											<p> 最近の主な研究</p>
+											
+									<p> 最近の主な研究</p>
 									　		
+									　		<p>星の死に際の “破壊的核燃焼” を明らかに－超新星残骸から爆発直前の激しい核燃焼過程の観測的証拠を掴む</p>
+											<p>鉄核崩壊型超新星の爆発の可否を判定する</p>
+											<p>下限質量近くの鉄核崩壊型超新星の性質</p>
+											<p>初代星形成の宇宙論的シミュレーション</p>
+											<p>超巨大星(Super massive stars)の進化と爆発</p>
+											<p>ペア不安定型超新星（自転と金属量の影響）</p>
 								
 								</div>
 							</section>
@@ -199,5 +206,6 @@
 
         </body>
 </html>
+
 
 
