--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>入学希望者の皆様へ</h2>
+										<h2>学部課題研究、大学院入学希望者の皆様へ</h2>
 									</header>
-									<p>Write something here...</p>
+									<p>希望があればZoom等で説明を行うので、下記のメールアドレスへ問い合わせてください。</p>
 									<ul class="actions">
 										<li><a href="landing.html" class="button next">東京大学天文学専攻ホームページ</a></li>
 									</ul>
@@ -143,7 +143,8 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="mailto:umeda@astron.s.u-tokyo.ac.jp">umeda@astron.s.u-tokyo.ac.jp</a>
+										<a href="mailto:umeda@astron.s.u-tokyo.ac.jp">umeda_@_astron.s.u-tokyo.ac.jp</br>
+										(_＠_を @ に変える)</a>
 									</div>
 								</section>
 								<section>
