--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 									</header>
 									<p>希望があればZoom等で説明を行うので、下記のメールアドレスへ問い合わせてください。</p>
 									<ul class="actions">
-										<li><a href="landing.html" class="button next">東京大学天文学専攻ホームページ</a></li>
+										<li><a href="https://www.astron.s.u-tokyo.ac.jp" class="button next">東京大学天文学専攻ホームページ</a></li>
 									</ul>
 								</div>
 							</section>
