--- a/Members.html
+++ b/Members.html
@@ -198,7 +198,8 @@
                                                                         <div class="contact-method">
                                                                                 <span class="icon solid alt fa-envelope"></span>
                                                                                 <h3>Email</h3>
-                                                                                <a href="mailto:umeda@astron.s.u-tokyo.ac.jp">umeda@astron.s.u-tokyo.ac.jp</a>
+                                                                                <a href="mailto:umeda@astron.s.u-tokyo.ac.jp">umeda_@_astron.s.u-tokyo.ac.jp</br>
+										(_＠_を @ に変える)</a>
                                                                         </div>
                                                                 </section>
                                                                 <section>
